# ml_cv_portfolio

./: app.py  pyproject.toml  wsgi.py
app/: Dockerfile  __init__.py  forms.py  routes.py
app/static/css/: styles.css
app/static/js/: carousel.js
app/templates/: base.html  index.html  project_detail.html
